feat(launcher): implement LauncherService (mimics ai.class) closes #17